src/objects/PPITable__c.object
<CustomObject>
    <description>The PPI scoring table</description>
    <fields>
        <fullName>Identifier__c</fullName>
        <description>An identifier for the Table. This allows the tables to be reportable across Green and Yellow resets</description>
        <externalId>true</externalId>
        <label>Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PovertyLine__c</fullName>
        <description>The display name of PPI Table</description>
        <label>Poverty Line</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PovertyRate__c</fullName>
        <description>The national poverty rate for this line</description>
        <label>Poverty Rate</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RemoteId__c</fullName>
        <description>The Id of PPI Table as it is in the org that the table was downloaded from</description>
        <externalId>true</externalId>
        <label>Remote Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyLibrary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Survey Library that the PPI Table was downloaded from</description>
        <label>Remote Library</label>
        <referenceTo>SurveyLibrary__c</referenceTo>
        <relationshipLabel>Survey Library</relationshipLabel>
        <relationshipName>Survey_Library</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PPI Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PPI Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPI Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Table_Name</fullName>
        <active>false</active>
        <errorConditionFormula>Name !=&apos;&apos;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The table name can&apos;t be empty</errorMessage>
    </validationRules>
</CustomObject>